--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="miscellaneous">Miscellaneous</string>
     <string name="pick_color">Pick Color</string>
     <string name="add_image">Add Image</string>
+    <string name="add_web_link">Add Web Link</string>
+    <string name="add">ADD</string>
+    <string name="cancel">CANCEL</string>
 </resources>
