--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="add_web_link">Add Web Link</string>
     <string name="add">ADD</string>
     <string name="cancel">CANCEL</string>
+    <string name="delete">Delete note</string>
+    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
+    <string name="delete_note">DELETE NOTE</string>
 </resources>
